# RedPitaya-FPGA

./: .gitignore  Makefile  README.md  program_fpga.tcl  red_pitaya_hsi_dts.tcl  red_pitaya_hsi_fsbl.tcl  red_pitaya_vivado_Z10.tcl  red_pitaya_vivado_project_Z10.tcl  red_pitaya_vivado_project_Z20.tcl  red_pitaya_vivado_project_Z20_14.tcl
modeling/: fix_and_build_fsbl.sh  gen_lut.py
modeling/rtl/: cic_filter.sv  feedback_controller_top.sv  pid_controller.sv  prng.sv  scaler.sv  signal_model.sv  sine_gen.sv  sine_lut.mem  sine_lut.sv
prj/v0.94/ip/: systemZ10.tcl  systemZ20.tcl  systemZ20_14.tcl
prj/v0.94/rtl/: red_pitaya_top.sv
rp_web/: .gitignore
rp_web/backend/: Cargo.toml
rp_web/backend/src/: feedback_controller.rs  main.rs  scope.rs
rp_web/backend/src/hal/: mock.rs  mod.rs  real.rs
rp_web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
rp_web/frontend/src/: App.vue
rp_web/frontend/src/components/: AllanDeviationView.vue  ControlPanel.vue  ScopeView.vue
rp_web/scripts/: configure_web_scope.sh  deploy.sh  deploy_to_device.py  package.sh  run_dev.sh
rtl/: red_pitaya_dummy.sv  sys_bus_interconnect.sv
rtl/classic/: red_pitaya_hk.v
rtl/interface/: sys_bus_if.sv
scripts/: build_sdcard_image.sh
